[package]
name = "daktilo"
version = "0.1.0-alpha.0"
description = "Turn your keyboard into a typewriter! 📇"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/orhun/daktilo"
repository = "https://github.com/orhun/daktilo"
keywords = ["typewriter", "keyboard", "nostalgic", "type"]
categories = ["command-line-utilities", "multimedia"]
default-run = "daktilo"
rust-version = "1.70.0"
edition = "2021"

[[bin]]
name = "daktilo-completions"
path = "src/bin/completions.rs"

[[bin]]
name = "daktilo-mangen"
path = "src/bin/mangen.rs"

[dependencies]
rdev = { version = "0.5.3", features = ["serialize"] }
rodio = { version = "0.17.1", default-features = false, features = [
  "symphonia-mp3",
] }
rust-embed = { version = "8.0.0", features = ["debug-embed"] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
clap = { version = "4.4.4", features = ["derive", "env", "wrap_help", "cargo"] }
serde = { version = "1.0.188", features = ["derive"] }
dirs = "5.0.1"
toml = "0.8.0"
regex = "1.9.5"
serde_regex = "1.1.0"
colored = "2.0.4"
clap_complete = "4.4.1"
clap_mangen = "0.2.14"
fastrand = "2.0.0"

[dev-dependencies]
pretty_assertions = "1.4.0"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
debug = false
