[package]
name = "daktilo"
version = "0.5.0"
description = "Turn your keyboard into a typewriter! 📇"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/orhun/daktilo"
repository = "https://github.com/orhun/daktilo"
keywords = ["typewriter", "keyboard", "nostalgic", "type"]
categories = ["command-line-utilities", "multimedia"]
default-run = "daktilo"
rust-version = "1.70.0"
edition = "2021"

[features]
audio-tests = []

[[bin]]
name = "daktilo-completions"
path = "src/bin/completions.rs"

[[bin]]
name = "daktilo-mangen"
path = "src/bin/mangen.rs"

[dependencies]
rdev = { version = "0.5.3", features = ["serialize"] }
rodio = { version = "0.17.2", default-features = false, features = [
  "symphonia-mp3",
] }
rust-embed = { version = "8.0.0", features = ["debug-embed", "compression"] }
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
clap = { version = "4.4.6", features = ["derive", "env", "wrap_help", "cargo"] }
serde = { version = "1.0.189", features = ["derive"] }
dirs = "5.0.1"
toml = "0.8.2"
regex = "1.10.2"
serde_regex = "1.1.0"
colored = "2.0.4"
clap_complete = "4.4.3"
clap_mangen = "0.2.14"
fastrand = "2.0.1"

[dev-dependencies]
pretty_assertions = "1.4.0"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
debug = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.3.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "x86_64-unknown-linux-gnu",
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "upload"
# Ignore out-of-date contents
allow-dirty = ["ci", "msi"]

[package.metadata.wix]
upgrade-guid = "51610A8E-55C9-4F49-8C9F-3529499D5C60"
path-guid = "2198A7FB-5F3C-4FAB-B253-2314115AD2DD"
