[package]
name = "daktilo"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
edition.workspace = true
default-run = "daktilo"

[features]
audio-tests = []

[[bin]]
name = "daktilo-completions"
path = "src/bin/completions.rs"

[[bin]]
name = "daktilo-mangen"
path = "src/bin/mangen.rs"

[dependencies]
clap = { version = "4.4.7", features = ["derive", "env", "wrap_help", "cargo"] }
dirs = "5.0.1"
regex = "1.10.2"
serde_regex = "1.1.0"
clap_complete = "4.4.4"
clap_mangen = "0.2.15"
colored = "2.0.4"
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
daktilo_lib = { path = "../daktilo_lib" }

[dev-dependencies]
pretty_assertions.workspace = true

[package.metadata.dist.dependencies.apt]
libasound2-dev = '*'
libxi-dev = '*'
libxtst-dev = '*'
pkg-config = '*'

[package.metadata.wix]
upgrade-guid = "51610A8E-55C9-4F49-8C9F-3529499D5C60"
path-guid = "2198A7FB-5F3C-4FAB-B253-2314115AD2DD"
