[package]
name = "daktilo"
version = "0.6.0"
description.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
default-run = "daktilo"
rust-version = "1.74.1"

[[bin]]
name = "daktilo-completions"
path = "src/bin/completions.rs"

[[bin]]
name = "daktilo-mangen"
path = "src/bin/mangen.rs"

[dependencies]
clap = { version = "4.5.45", features = ["derive", "env", "wrap_help", "cargo"] }
dirs = "6.0.0"
regex = "1.11.2"
serde_regex = "1.1.0"
clap_complete = "4.5.57"
clap_mangen = "0.2.29"
colored = "3.0.0"
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
daktilo_lib = { path = "../daktilo_lib", version = "0.6.0" }

[dev-dependencies]
pretty_assertions.workspace = true

[package.metadata.dist.dependencies.apt]
libasound2-dev = '*'
libxi-dev = '*'
libxtst-dev = '*'
pkg-config = '*'

[package.metadata.wix]
upgrade-guid = "51610A8E-55C9-4F49-8C9F-3529499D5C60"
path-guid = "2198A7FB-5F3C-4FAB-B253-2314115AD2DD"
license = false
eula = false
