[package]
name = "daktilo_lib"
version = "0.6.0"
description.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
rust-version = "1.74.1"

[features]
audio-tests = []

[dependencies]
rdev = { version = "0.5.3", features = ["serialize"] }
rodio = { version = "0.22.1", default-features = false, features = [
  "symphonia-mp3",
] }
rust-embed = { version = "8.11.0", features = ["debug-embed", "compression"] }
toml = "1.0.3"
fastrand = "2.3.0"
dirs = "6.0.0"
regex = "1.12.3"
serde_regex = "1.1.0"
tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
